# $Id: Makefile.am,v 1.1.1.1 2002/11/23 07:57:08 annihilator Exp $
#
# 檔名：Makefile.am
#
# 這個檔案用來設定 automake 的各項功能，並作為 automake 的輸入檔以產生
# Makefile.in。如果你不打算修改 Neolith 的程式，可以不理會這個檔案的內
# 容。
#
# ◎ 有關 automake 的使用方法及說明，請執行以下指令：
#	info automake
#    或參考 GNU 的 automake 專案首頁：
#	http://www.gnu.org/software/automake/automake.html
#
# 原作者： Annihilator <annihilator@muds.net> (2001/05/01)

###########################################################################
# 這個檔案原作者以 PUBLIC DOMAIN 方式授權，您可以任何方式任意使用、修改、 #
# 散佈、甚至販賣(有人願意買的話)， 但原作者對這個檔案的功能或安全性並不提 #
# 供任何擔保(NO WARRANTY)。                                               #
###########################################################################

EXTRA_DIST = README

noinst_HEADERS = function.h localtime.h origin.h parser_error.h \
	runtime_config.h socket_err.h type.h

