[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m3-testbots"
dynamic = ["version"]
description = 'A collection of python testbots that tests the M3 mudlib.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Taedkar", email = "taedlar@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pexpect",
]

[project.scripts]
smoke_test = "smoke_test:test_console_mode"

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src tests}"

[tool.hatch.build.targets.wheel]
include = ["src/smoke_test.py"]
sources = ["src"]
