[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m3-testbots"
dynamic = ["version"]
description = 'A collection of python testbots that tests the M3 mudlib.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Taedkar", email = "taedlar@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pexpect",
]

[tool.hatch.envs.default.scripts]
smoke_test = "python src/smoke_test.py {args}"
mcp_client = "python src/mcp_client.py {args}"

[tool.hatch.version]
path = "src/__about__.py"
